# enzyme_plus

./: .eslintrc.cjs  .gitignore  ALGORITHMS_EN.md  ALGORITMOS.md  BUILD_AND_DEPLOY.md  LICENSE  README.md  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
dist-electron/: main.cjs  main.cjs.map  preload.mjs  preload.mjs.map
electron/: electron-env.d.ts  main.ts  preload.ts
src/: App.tsx  declarations.d.ts  index.css  main.tsx  mdx.d.ts
src/components/: AppLayout.tsx  HelpDialog.tsx  Mermaid.tsx  ThemeToggle.tsx  TitleBar.tsx  WindowControls.tsx  theme-provider.tsx
src/components/content/: ExportDialog.tsx  FitDialog.tsx  KineticsForm.tsx  MainContent.tsx  PlotComponent.tsx
src/components/simulation/: PlotComponent.tsx  SimulationController.tsx  SimulationRunner.tsx
src/components/ui/: alert-dialog.tsx  card.tsx  dialog.tsx
src/content/help/: 10-algoritmos-resumen-y-notacion.mdx  11-diagrama-general.mdx  12-umbrales-lineales.mdx  13-salto-tau.mdx  14-bloques-detalle.mdx  15-aproximaciones-y-limites.mdx  16-pistas-implementacion.mdx  17-diagrama-pasos.mdx  18-optimizaciones.mdx  19-consejos-validacion.mdx  20-compatibilidad-funciones.mdx  30-bosquejo-tecnica.mdx  31-como-funciona-aplicacion.mdx  (+5 more)
src/hooks/: use-theme.ts
src/lib/: fitting.ts  precise-simulation.d.ts  precise-simulation.ts  simulation-engine.ts  wasm-sim.ts
src/state/: simulationSlice.ts  useAppStore.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+5 files in other folders)
